Fix event route, Add event data field to task model, add upload images event
