# src/controllers/event/event.routes.ts
@@ -1,7 +1,8 @@
 import { Router } from 'express';
 
 import * as Controller from './event.controller';
-import { Authorization } from '../../middlewares';
+import { Authorization, ImageHandler } from '../../middlewares';
+import { UploadImage } from '../../common';
 
 export const EventRouter = Router();
 
@@ -10,3 +11,8 @@ EventRouter.put('/update-event/:_id', Authorization, Controller.updateEvent);
 EventRouter.delete('/delete-event/:_id', Authorization, Controller.deleteEvent);
 EventRouter.get('/get-detail-event/:_id', Authorization, Controller.getDetailEvent);
 EventRouter.get('/get-list-event', Authorization, Controller.getListEvent);
+EventRouter.post(
+    '/upload-images-event',
+    ImageHandler.array('images'),
+    Controller.uploadImagesEvent,
+);
